--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,6 +21,11 @@
 %br/
 = link_to 'New Product', new_product_path
 
+%h1 Stats
+%p= "Number of unique products: #{@distinct_product_count}"
+%p= "Average products price: #{@average_product_price}"
+%p= "Quantity summed over all items: #{@total_quantity_over_all_items}"
+
 %h1 Chunky Bacon Area
 - (1..100).each do |position|
   %p= "Chunky Bacon #{position}"
